--- a/index.html
+++ b/index.html
@@ -4,56 +4,23 @@
     <title>
       Andrew Colabella
     </title>
-    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-    <style>
-      body {
-      background-color: black;
-      color: white;
-      font-family: 'Source Code Pro', monospace;
-      }
-
-      #headbar {
-      margin: 20px;
-      }
-
-      img {
-      margin: 20px;
-      }
-
-      #makefile {
-      margin: 20px;
-      }
-
-      p {
-      margin-bottom: 0px;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
-    <div id="makefile">
-      <p>
-	make[1]:Entering directory '/usr/src/linux'</br>
-	CC[M] /home/delta/timewarp/11/timewarp.o</br>
-	Compiling C: personal_website.c</br>
-	avr-gcc -c -mmcu-at90usb162 -I, -gdwarf -2 -DF_CPU=0x167EFA119</br>
-	Creating log file for system_boot.</br>
-	####IMPORTING PACKAGES####</br>
-	Collecting text, images, and modules</br>
-	Importing bamf.c, -funcsigned-bitfields -fpack-struct -fshort-enums</br>
-	WARNING: Overclocking skillset_m.rb</br>
-	CC[M] /home/btles/sgtpep/00/e.o</br>
-	Compiling info_group[2] - void structs exporting emacs_is_best.o</br>
-	include/linux/slab_def.h:130:30: note:declared here</br>
-	make[2]: *** [/home/rrrr/systimer/22/odelay.o] </br>
-	In function red_dit() warning: returning non-void</br>
-	
-      </p>
-    </div>
-    <img src="me.jpg" height="200"/>
     <div id="headbar">
-      <h2>Andrew Colabella</h2>
-      <p>Studies Computer Engineering/Computer Science</p>
-      <p>@ Northeastern University</p>
+      <div id="titlebar">
+	ANDREW COLABELLA
+      </div>
+      <div id="menus">
+	<ul id="my-menu">
+	  <li class="menu-items">ABOUT</li>
+	  <li class="menu-items">STORIES</li>
+	  <li class="menu-items">PHOTOS</li>
+	  <li class="menu-items">CONTACT</li>
+	</ul>
+	
+      </div>
     </div> 
    </body>
 </html>
