--- a/index.html
+++ b/index.html
@@ -5,22 +5,21 @@
       Andrew Colabella
     </title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cantarell" rel="stylesheet">
   </head>
   <body>
     <div id="headbar">
       <div id="titlebar">
-	ANDREW COLABELLA
+	A N D R E W &nbsp C O L A B E L L A
       </div>
-      <div id="menus">
-	<ul id="my-menu">
-	  <li class="menu-items">ABOUT</li>
-	  <li class="menu-items">STORIES</li>
-	  <li class="menu-items">PHOTOS</li>
-	  <li class="menu-items">CONTACT</li>
-	</ul>
-	
-      </div>
-    </div> 
+    </div>
+    <div id="sidebar">
+      <ul>
+	<li>ABOUT</li>
+	<li>RESUME</li>
+	<li>SHORT STORIES</li>
+	<li>PHOTOS</li>
+      </ul>
+    </div>
    </body>
 </html>
