fully functioning panel system

--- a/index.html
+++ b/index.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <title>
       Andrew Colabella
     </title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Cantarell" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="scripts.js"></script>
   </head>
   <body>
     <div id="headbar">
       <div id="titlebar">
-	A N D R E W &nbsp C O L A B E L L A
+	<a href="#home" id="billboard">
+	  A N D R E W &nbsp C O L A B E L L A
+	</a>
       </div>
     </div>
-    <div id="sidebar">
-      <ul>
-	<li>ABOUT</li>
-	<li>RESUME</li>
-	<li>SHORT STORIES</li>
-	<li>PHOTOS</li>
+    <div id="sidebar"> 
+      <ul class="side-items">
+	<li><a href="#about" class="panel-link">ABOUT</a></li>
+	<li><a href="#shorts" class="panel-link">SHORT STORIES</a></li>
+	<li><a href="#photos" class="panel-link">PHOTOS</a></li>
+	<li><a href="#resume" class="panel-link">RESUME</a></li>
       </ul>
     </div>
+    <div id="home" class="major-panel">
+      home12345678
+    </div>
+    <div id="about" class="major-panel">
+      test123456
+    </div>
+    <div id="shorts" class="major-panel">
+      asfdasdfdasdf
+    </div>
+    <div id="photos" class="major-panel">
+      tetasgdfasdf
+    </div>
+    <div id="resume" class="major-panel">
+      asdfastqwtr
+    </div>    
    </body>
 </html>
