began work with node.js

--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
     </div>
     <div id="sidebar"> 
       <ul class="side-items">
-	<li><a href="#about" class="panel-link">ABOUT</a></li>
-	<li><a href="#shorts" class="panel-link">SHORT STORIES</a></li>
-	<li><a href="#photos" class="panel-link">PHOTOS</a></li>
-	<li><a href="#resume" class="panel-link">RESUME</a></li>
+	<li class="panel-link"><a href="#about">ABOUT</a></li>
+	<li class="panel-link"><a href="#shorts">SHORT STORIES</a></li>
+	<li class="panel-link"><a href="#photos">PHOTOS</a></li>
+	<li class="panel-link"><a href="#resume">RESUME</a></li>
       </ul>
     </div>
     <div id="home" class="major-panel">
-      home12345678
+
     </div>
     <div id="about" class="major-panel">
-      test123456
+
     </div>
     <div id="shorts" class="major-panel">
-      asfdasdfdasdf
+
     </div>
     <div id="photos" class="major-panel">
-      tetasgdfasdf
+
     </div>
     <div id="resume" class="major-panel">
-      asdfastqwtr
+
     </div>    
    </body>
 </html>
