--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="sidebar"> 
       <ul class="side-items">
 	<li class="panel-link"><a href="#about">ABOUT</a></li>
-	<li class="panel-link"><a href="#shorts">SHORT STORIES</a></li>
+	<li class="panel-link"><a href="#shorts">WRITINGS</a></li>
 	<li class="panel-link"><a href="#photos">PHOTOS</a></li>
 	<li class="panel-link"><a href="#resume">RESUME</a></li>
       </ul>
@@ -41,6 +41,8 @@
     </div>
     <div id="resume" class="major-panel">
 
-    </div>    
+    </div>
+    <div id="rightbar">
+    </div>
    </body>
 </html>
