updated right sidebar

--- a/index.html
+++ b/index.html
@@ -28,21 +28,26 @@
       </ul>
     </div>
     <div id="home" class="major-panel">
-
     </div>
     <div id="about" class="major-panel">
-
     </div>
     <div id="shorts" class="major-panel">
-
     </div>
     <div id="photos" class="major-panel">
-
     </div>
     <div id="resume" class="major-panel">
-
     </div>
     <div id="rightbar">
+      <ul class="side-items">
+	<li>
+	  <input id="my_search" type="text" placeholder="SEARCH">
+	<li>FILTER</li>
+	<ul>
+	  <li>Short Stories</li>
+	  <li>Blog</li>
+	  <li>Essays</li>
+	  </ul>
+      </ul>
     </div>
    </body>
 </html>
