fixed filter menu

--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
       <ul class="side-items">
 	<li>
 	  <input id="my_search" type="text" placeholder="SEARCH">
-	<li>FILTER</li>
-	<ul>
-	  <li>Short Stories</li>
-	  <li>Blog</li>
-	  <li>Essays</li>
-	  </ul>
+	<li><u>FILTER</u></li>
+	<li class="filter-link"><a>SHORT STORIES</a></li>
+	<li class="filter-link"><a>BLOG POSTS</a></li>
+	<li class="filter-link"><a>ESSAYS</a></li>
       </ul>
     </div>
    </body>
